Colocando título e manuteções

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Fogo - DOOM</title>
+    <title>Fogo DOOM</title>
 </head>
 
 <body>
+
+    <h1 class="titulo col-lg-12 col-md-12 col-12">Fogo DOOM</h1>
 
     <div id="fogo" class="col-lg-12 col-md-12 col-12" title="Fogo"></div>
 
