--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1 class="titulo col-lg-12 col-md-12 col-12">Fogo DOOM</h1>
 
-    <div id="fogo" class="col-lg-12 col-md-12 col-12" title="Fogo"></div>
+    <div id="fogo" class="col-lg-12 col-md-12 col-12"></div>
 
     <div class="botoes col-lg-12 col-md-12 col-12">
         <button onclick="menosFogo()" title="Menos fogo">-</button>
